<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon">

    <FrameLayout
        android:id="@+id/imageView6"
        android:layout_width="349dp"
        android:layout_height="327dp"
        android:layout_marginTop="168dp"
        android:foreground="@drawable/fon_ocno_cozdania"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fon_ocno_cozdania" />

    <EditText
        android:id="@+id/room_creation_name"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/white_2"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/manrope_bold"
        android:foregroundTintMode="add"
        android:text="@string/name"
        android:textColor="@color/dark_corch"
        android:textSize="18sp"
        app:iconTint="@color/white_2"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/room_creation_password"
        tools:text="@string/name" />

    <EditText
        android:id="@+id/room_creation_password"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@color/white_2"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/manrope_bold"
        android:foregroundTintMode="add"
        android:text="@string/Password"
        android:textColor="@color/dark_corch"
        android:textSize="18sp"
        app:iconTint="@color/white_2"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/room_creation_id"
        tools:text="@string/Password" />

    <EditText
        android:id="@+id/room_creation_id"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="@color/white_2"
        android:backgroundTintMode="add"
        android:ems="10"
        android:fontFamily="@font/manrope_bold"
        android:foregroundTintMode="add"
        android:text="@string/ID"
        android:textColor="@color/dark_corch"
        android:textSize="18sp"
        app:iconTint="@color/white_2"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        tools:text="@string/ID" />

    <ImageButton
        android:id="@+id/room_creation_create"
        android:layout_width="324dp"
        android:layout_height="101dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/create"
        android:foreground="@drawable/create"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6" />

</androidx.constraintlayout.widget.ConstraintLayout>